[package]
name = "payments-engine"
version = "0.1.0"
authors = ["Brandon Kite <brandonkite92@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
bigdecimal = "0.2.0"
async-trait = "0.1.50"
futures = "0.3.14"
tokio =  { version = "1.5.0", features = ["rt", "macros"] }
thiserror = "1.0"
anyhow = "1.0.40"