[package]
name = "payments-engine"
version = "0.1.0"
authors = ["Brandon Kite <brandonkite92@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
rust_decimal = { version = "1.13", features = ["serde-bincode", "serde-str"] }
async-trait = "0.1.50"
futures = "0.3.14"
tokio =  { version = "1.5.0", features = ["rt", "rt-multi-thread", "macros"] }
thiserror = "1.0"
anyhow = "1.0.40"
rand = "0.8.3"
serde = { version = "1.0.125", features = ["derive"] }
bincode = "1.3.3"
csv = "1.1.6"